# amplifier-bundle-letsgo

./: .gitignore  CLAUDE.md  README.md  SCAFFOLDING.md  bundle.md  pyproject.toml  ruff.toml
agents/: admin-assistant.md  creative-specialist.md  document-specialist.md  gateway-operator.md  mcp-specialist.md  memory-curator.md  security-reviewer.md
behaviors/: browser-capabilities.yaml  canvas-capabilities.yaml  gateway.yaml  heartbeat.yaml  letsgo-capabilities.yaml  mcp-capabilities.yaml  memory-boundaries.yaml  memory-capture.yaml  memory-compression.yaml  memory-consolidation.yaml  memory-inject.yaml  memory-memorability.yaml  memory-store.yaml  memory-temporal.yaml  observability.yaml  sandbox.yaml  secrets.yaml  security-policy.yaml  skills.yaml  voice-capabilities.yaml  webchat-capabilities.yaml
browser/: bundle.md
canvas/: bundle.md
channels/canvas/: pyproject.toml
channels/canvas/letsgo_channel_canvas/: __init__.py  adapter.py
channels/canvas/letsgo_channel_canvas/static/: index.html
channels/canvas/tests/: test_canvas_adapter.py
channels/feishu/: pyproject.toml
channels/feishu/letsgo_channel_feishu/: __init__.py  adapter.py
channels/feishu/tests/: test_feishu_adapter.py
channels/googlechat/: pyproject.toml
channels/googlechat/letsgo_channel_googlechat/: __init__.py  adapter.py
channels/googlechat/tests/: test_googlechat_adapter.py
channels/imessage/: pyproject.toml
channels/imessage/letsgo_channel_imessage/: __init__.py  adapter.py
channels/imessage/tests/: test_imessage_adapter.py
channels/irc/: pyproject.toml
channels/irc/letsgo_channel_irc/: __init__.py  adapter.py
channels/irc/tests/: test_irc_adapter.py
channels/line/: pyproject.toml
channels/line/letsgo_channel_line/: __init__.py  adapter.py
channels/line/tests/: test_line_adapter.py
channels/matrix/: pyproject.toml
channels/matrix/letsgo_channel_matrix/: __init__.py  adapter.py
channels/matrix/tests/: test_matrix_adapter.py
channels/mattermost/: pyproject.toml
channels/mattermost/letsgo_channel_mattermost/: __init__.py  adapter.py
channels/mattermost/tests/: test_mattermost_adapter.py
channels/nostr/: pyproject.toml
channels/nostr/letsgo_channel_nostr/: __init__.py  adapter.py
channels/nostr/tests/: test_nostr_adapter.py
channels/signal/: pyproject.toml
channels/signal/letsgo_channel_signal/: __init__.py  adapter.py
channels/signal/tests/: test_signal_adapter.py
channels/teams/: pyproject.toml
channels/teams/letsgo_channel_teams/: __init__.py  adapter.py
channels/teams/tests/: test_teams_adapter.py
channels/twitch/: pyproject.toml
channels/twitch/letsgo_channel_twitch/: __init__.py  adapter.py
channels/twitch/tests/: test_twitch_adapter.py
channels/webchat/: pyproject.toml
channels/webchat/letsgo_channel_webchat/: __init__.py  adapter.py  admin.py
channels/webchat/letsgo_channel_webchat/static/admin/: index.html
channels/webchat/letsgo_channel_webchat/static/chat/: index.html
channels/webchat/tests/: test_webchat_adapter.py
context/: browser-awareness.md  canvas-awareness.md  gateway-awareness.md  letsgo-instructions.md  mcp-awareness.md  memory-awareness.md  memory-store-awareness.md  memory-system-awareness.md  observability-awareness.md  sandbox-awareness.md  secrets-awareness.md  skills-awareness.md  soul-framework-awareness.md  team-collaboration-awareness.md  tool-policy-awareness.md  voice-awareness.md  webchat-awareness.md
docs/: CANVAS_WIRE_FORMAT.md  CAPABILITY_CONTRACTS.md  GATEWAY_GUIDE.md  MCP_GUIDE.md  MEMORY_ARCHITECTURE.md  MEMORY_GUIDE.md  MEMORY_SYSTEM_GUIDE.md  SECRETS_GUIDE.md  TOOL_POLICY_GUIDE.md  architecture-guide.md  letsgo-story.html  refactoring-audit.md  thin-awareness-template.md
gateway/: pyproject.toml
gateway/letsgo_gateway/: auth.py  cli.py  cron.py  daemon.py  display.py  files.py  heartbeat.py  models.py  router.py  security.py  security_defaults.yaml  voice.py
gateway/letsgo_gateway/channels/: __init__.py  base.py  discord.py  package-lock.json  package.json  registry.py  slack.py  telegram.py  webhook.py  whatsapp.py  whatsapp_bridge.js
mcp/: bundle.md
modules/hooks-memory-boundaries/: pyproject.toml
modules/hooks-memory-boundaries/amplifier_module_hooks_memory_boundaries/: __init__.py
modules/hooks-memory-capture/: pyproject.toml
modules/hooks-memory-capture/amplifier_module_hooks_memory_capture/: __init__.py
modules/hooks-memory-compression/: pyproject.toml
modules/hooks-memory-compression/amplifier_module_hooks_memory_compression/: __init__.py
modules/hooks-memory-consolidation/: pyproject.toml
modules/hooks-memory-consolidation/amplifier_module_hooks_memory_consolidation/: __init__.py
modules/hooks-memory-inject/: pyproject.toml
modules/hooks-memory-inject/amplifier_module_hooks_memory_inject/: __init__.py
modules/hooks-memory-memorability/: pyproject.toml
modules/hooks-memory-memorability/amplifier_module_hooks_memory_memorability/: __init__.py
modules/hooks-memory-temporal/: pyproject.toml
modules/hooks-memory-temporal/amplifier_module_hooks_memory_temporal/: __init__.py
modules/hooks-telemetry/: pyproject.toml
modules/hooks-telemetry/amplifier_module_hooks_telemetry/: __init__.py
modules/hooks-tool-policy/: pyproject.toml
modules/hooks-tool-policy/amplifier_module_hooks_tool_policy/: __init__.py
modules/tool-canvas/: pyproject.toml
modules/tool-canvas/amplifier_module_tool_canvas/: __init__.py
modules/tool-mcp-client/: pyproject.toml
modules/tool-mcp-client/amplifier_module_tool_mcp_client/: __init__.py  config.py  protocol.py  transport.py
modules/tool-media-pipeline/: pyproject.toml
modules/tool-media-pipeline/amplifier_module_tool_media_pipeline/: __init__.py  synthesize.py  transcribe.py
modules/tool-memory-store/: pyproject.toml
modules/tool-memory-store/amplifier_module_tool_memory_store/: __init__.py
modules/tool-sandbox/: pyproject.toml
modules/tool-sandbox/amplifier_module_tool_sandbox/: __init__.py
modules/tool-secrets/: pyproject.toml
modules/tool-secrets/amplifier_module_tool_secrets/: __init__.py
(+102 files in other folders)
