[project]
name = "amplifier-bundle-letsgo"
version = "0.1.0"
description = "Security, memory, secrets, sandbox, and observability capabilities bundle"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=42.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4"]
