[project]
name = "letsgo-gateway"
version = "0.1.0"
description = "Always-on gateway daemon with multi-channel messaging, auth, and scheduling"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "amplifier-core",
]

[project.scripts]
letsgo-gateway = "letsgo_gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_gateway"]
