[project]
name = "letsgo-gateway"
version = "0.1.0"
description = "Always-on gateway daemon with multi-channel messaging, auth, and scheduling"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "amplifier-core",
]

[project.optional-dependencies]
discord = ["discord.py>=2.3"]
telegram = ["python-telegram-bot>=20.0"]
slack = ["slack-sdk>=3.21"]
whatsapp = ["aiohttp>=3.9"]
all-channels = [
    "discord.py>=2.3",
    "python-telegram-bot>=20.0",
    "slack-sdk>=3.21",
]

[project.scripts]
letsgo-gateway = "letsgo_gateway.cli:main"

[project.entry-points."letsgo.channels"]
webhook = "letsgo_gateway.channels.webhook:WebhookChannel"
whatsapp = "letsgo_gateway.channels.whatsapp:WhatsAppChannel"
telegram = "letsgo_gateway.channels.telegram:TelegramChannel"
discord = "letsgo_gateway.channels.discord:DiscordChannel"
slack = "letsgo_gateway.channels.slack:SlackChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_gateway"]
