[project]
name = "letsgo-channel-canvas"
version = "0.1.0"
description = "Canvas visual workspace channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
    "aiohttp>=3.9",
]

[project.entry-points."letsgo.channels"]
canvas = "letsgo_channel_canvas:CanvasChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_canvas"]
