[project]
name = "letsgo-channel-feishu"
version = "0.1.0"
description = "Feishu (Lark) channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["feishu-sdk>=0.1"]

[project.entry-points."letsgo.channels"]
feishu = "letsgo_channel_feishu:FeishuChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_feishu"]
