[project]
name = "letsgo-channel-googlechat"
version = "0.1.0"
description = "Google Chat channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["google-api-python-client>=2.0"]

[project.entry-points."letsgo.channels"]
googlechat = "letsgo_channel_googlechat:GoogleChatChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_googlechat"]
