[project]
name = "letsgo-channel-imessage"
version = "0.1.0"
description = "iMessage channel adapter for LetsGo gateway (macOS only)"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.entry-points."letsgo.channels"]
imessage = "letsgo_channel_imessage:IMessageChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_imessage"]
