[project]
name = "letsgo-channel-irc"
version = "0.1.0"
description = "IRC channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["irc3>=2024.0"]

[project.entry-points."letsgo.channels"]
irc = "letsgo_channel_irc:IRCChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_irc"]
