[project]
name = "letsgo-channel-mattermost"
version = "0.1.0"
description = "Mattermost channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["mattermostdriver>=7.0"]

[project.entry-points."letsgo.channels"]
mattermost = "letsgo_channel_mattermost:MattermostChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_mattermost"]
