[project]
name = "letsgo-channel-nostr"
version = "0.1.0"
description = "Nostr channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["nostr-sdk>=0.30"]

[project.entry-points."letsgo.channels"]
nostr = "letsgo_channel_nostr:NostrChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_nostr"]
