[project]
name = "letsgo-channel-teams"
version = "0.1.0"
description = "Microsoft Teams channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
botbuilder = ["botbuilder-core>=4.14"]

[project.entry-points."letsgo.channels"]
teams = "letsgo_channel_teams:TeamsChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_teams"]
