[project]
name = "letsgo-channel-twitch"
version = "0.1.0"
description = "Twitch channel adapter for LetsGo gateway"
requires-python = ">=3.11"
dependencies = [
    "letsgo-gateway",
]

[project.optional-dependencies]
sdk = ["twitchio>=2.8"]

[project.entry-points."letsgo.channels"]
twitch = "letsgo_channel_twitch:TwitchChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_twitch"]
