[project]
name = "letsgo-channel-webchat"
version = "0.1.0"
description = "Web chat interface and admin dashboard channel for LetsGo gateway"
requires-python = ">=3.11"
dependencies = ["letsgo-gateway", "aiohttp>=3.9"]

[project.entry-points."letsgo.channels"]
webchat = "letsgo_channel_webchat:WebChatChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["letsgo_channel_webchat"]
