[project]
name = "amplifier-module-hooks-memory-capture"
version = "0.1.0"
description = "Auto-capture hook for memory observations from tool executions"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-memory-capture = "amplifier_module_hooks_memory_capture:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_capture"]
