[project]
name = "amplifier-module-hooks-memory-compression"
version = "0.1.0"
description = "Compositional memory compression via cluster-and-merge"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-memory-compression = "amplifier_module_hooks_memory_compression:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_compression"]
