[project]
name = "amplifier-module-hooks-memory-inject"
version = "0.1.0"
description = "Auto-inject relevant memories into agent context at prompt time"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-memory-inject = "amplifier_module_hooks_memory_inject:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_inject"]
