[project]
name = "amplifier-module-hooks-memory-memorability"
version = "0.1.0"
description = "Memorability scoring for selective memory encoding"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-memory-memorability = "amplifier_module_hooks_memory_memorability:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_memory_memorability"]
