[project]
name = "amplifier-module-hooks-telemetry"
version = "0.1.0"
description = "Telemetry and metrics collection hook for session observability"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-telemetry = "amplifier_module_hooks_telemetry:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_telemetry"]
