[project]
name = "amplifier-module-hooks-tool-policy"
version = "0.1.0"
description = "Tool execution policy hook with risk classification, allowlists, and approval gates"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-tool-policy = "amplifier_module_hooks_tool_policy:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_tool_policy"]
