[project]
name = "amplifier-module-tool-canvas"
version = "0.1.0"
description = "Canvas visual workspace tool for Amplifier — push charts, HTML, SVG, markdown, code, and tables"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-canvas = "amplifier_module_tool_canvas:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_canvas"]
