[project]
name = "amplifier-module-tool-media-pipeline"
version = "0.1.0"
description = "Audio transcription and text-to-speech tool for Amplifier"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-media-pipeline = "amplifier_module_tool_media_pipeline:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_media_pipeline"]
