[project]
name = "amplifier-module-tool-sandbox"
version = "0.1.0"
description = "Sandboxed command execution with resource limits and isolation"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-sandbox = "amplifier_module_tool_sandbox:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_sandbox"]
