[project]
name = "amplifier-module-tool-secrets"
version = "0.1.0"
description = "Encrypted secret storage and retrieval tool"
requires-python = ">=3.11"
dependencies = ["cryptography>=42.0"]

[project.entry-points."amplifier.modules"]
tool-secrets = "amplifier_module_tool_secrets:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_secrets"]
